[build-system]
requires = ["hatchling>=1.26.2", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "semiwrap"
dynamic = ["version"]
description = "Semi-automated tool to wrap C++ code for use by python"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt", "src/semiwrap/pybind11/LICENSE"]
authors = [
    {name = "Dustin Spicuzza", email = "robotpy@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "sphinxify >= 0.7.3",
    "validobj ~= 1.2",
    "cxxheaderparser[pcpp] ~= 1.4.1",
    "tomli",
    "tomli_w",
    "toposort",
    "typing-extensions",
    "validobj",
    "pyyaml >= 5.1",
    "patch == 1.*",
    "pybind11-stubgen ~= 2.5.1",
    "delocate; platform_system == 'Darwin'",
    "distro; platform_system == 'Linux'",
]

[project.entry-points.hatch]
semiwrap = "robotpy_build.hooks"

[project.entry-points.pkg_config]
robotpy-build = "robotpy_build"

[project.scripts]
semiwrap = "semiwrap.tool:main"

[project.urls]
"Source code" = "https://github.com/robotpy/semiwrap"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/semiwrap/version.py"

[tool.hatch.build.targets.sdist]
packages = ["src/semiwrap"]
exclude = [
    "/src/semiwrap/pybind11"
]
[tool.hatch.build.targets.sdist.force-include]
"./src/semiwrap/pybind11/include" = "./semiwrap/pybind11/include"

[tool.hatch.build.targets.wheel]
packages = ["semiwrap"]
include = [
    "/semiwrap/pybind11/include",
    "/semiwrap/include",
]


[tool.black]
target-version = ["py38"]
extend-exclude = '''
^/src/semiwrap/pybind11
'''
