[metadata]
name = robotpy-build
description = Build tool for RobotPy projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Dustin Spicuzza
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/robotpy-build
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # pep 660 editable install implementation in setuptools 64+ break my workflow
    setuptools >= 45, < 64
    setuptools_scm >= 6.2
    header2whatever >= 0.4.8
    robotpy-cppheaderparser >= 5.1
    sphinxify >= 0.7.3
    pydantic >= 1.7.0, < 2
    tomli
    tomli_w
    toposort
    pyyaml >= 5.1
    patch == 1.*
    pybind11-stubgen == 1.0.dev1
    dataclasses; python_version < '3.7'
    delocate; platform_system == 'Darwin'
    distro; platform_system == 'Linux'
python_requires = >=3.8

[options.entry_points]
console_scripts =
    robotpy-build = robotpy_build.tool:main
robotpybuild =
    robotpy-build = robotpy_build.pkgcfg
