
# This section tells pip to install semiwrap before starting a build
[build-system]
build-backend = "hatchling.build"
requires = ["semiwrap", "hatch-meson", "hatchling"]

[project]
name = "swdemo"
description = "Demo program"
version = "0.0.1"

#
# hatch-semiwrap configuration
# .. this generates meson.build to perform autogen
#

[tool.hatch.build.hooks.semiwrap]
# autogen_build_path = "autogen"

#
# hatch-meson configuration
# .. this executes meson to build python extension modules
#

[tool.hatch.build.hooks.meson]


#
# semiwrap code generation configuration
#

[tool.semiwrap]

[tool.semiwrap.extension_modules."swdemo._demo"]
name = "demo"

[tool.semiwrap.extension_modules."swdemo._demo".headers]
demo = "include/demo.h"
